--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.13.2",
+    "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.1",
-    "lodash": "^3.10.0",
-    "morgan": "^1.6.1"
+    
+    "mongoose": "^4.4.6",
+    
   }
 }
